made read_barrier() and write_barrier() a NOP on systems that don't need
Mon Jan 29 22:46:40 2007 Tim Janik <timj@gtk.org>

        * birnet/birnetthread.hh: made read_barrier() and write_barrier() a NOP
        on systems that don't need barriers. provided full_barrier().

        * birnetthread.cc: fixed a bad bug in atomic_int_set() and
        atomic_pointer_set() which caused atomic values to temporarily be 0.

        * birnet/birnetcdefs.h: provide memory barrier implementations based on atomic ops.

        * birnet/Makefile.am: define BIRNET_MEMORY_BARRIER_NEEDED in birnetconfig.h.

        * configure.inc: provide BIRNET_MEMORY_BARRIER_NEEDED=[01] based on
        glib's G_ATOMIC_OP_MEMORY_BARRIER_NEEDED.

svn path=/trunk/; revision=4259

--- a/birnet/Makefile.am
+++ b/birnet/Makefile.am
@@ -111,6 +111,7 @@ birnetconfig.h: $(top_builddir)/config.status # Makefile
 	&& echo "#define BIRNET_HAVE_MUTEXATTR_SETTYPE	(@BIRNET_HAVE_MUTEXATTR_SETTYPE@ && \\" >> xgen-$(@F) \
 	&& echo "                                        BIRNET_SIZEOF_PTH_MUTEX_T && \\" 	>> xgen-$(@F) \
 	&& echo "                                        BIRNET_SIZEOF_PTH_COND_T)" 		>> xgen-$(@F) \
+	&& echo "#define BIRNET_MEMORY_BARRIER_NEEDED   (@BIRNET_MEMORY_BARRIER_NEEDED@)"	>> xgen-$(@F) \
 	&& echo ""										>> xgen-$(@F) \
 	&& echo "/* Generated data ends here */" 						>> xgen-$(@F) \
 	&& cp xgen-$(@F) $@ \
