added DebugChannel, a reference counted interface which allows sending of
Thu Feb 1 20:27:09 2007 Tim Janik <timj@gtk.org>

        * birnetdebugtools.hh, birnetdebugtools.cc: added DebugChannel, a
        reference counted interface which allows sending of debug messages.
        if a debug channel is created with new_from_file_async(), printing
        a message happens in constant time in the calling thread, and the
        debugging output is written into a file by a background thread.

        * tests/threads.cc: added simply DebugChannel test.

svn path=/trunk/; revision=4263

--- a/birnet/Makefile.am
+++ b/birnet/Makefile.am
@@ -10,10 +10,11 @@ DEFS            = -DBIRNET_LOG_DOMAIN=\"BIRNET\" -D_BIRNET_SOURCE_EXTENSIONS
 GLIB_MKENUMS    = glib-mkenums
 
 birnet_headers = $(strip 		\
-	birnetcdefs.h			\
 	birnet.hh			\
 	birnetcdefs.h			\
+	birnetcdefs.h			\
 	birnetcpu.hh			\
+	birnetdebugtools.hh		\
 	birnetmsg.hh			\
 	birnetsignal.hh                 \
 	birnettests.h			\
@@ -25,6 +26,7 @@ birnet_headers = $(strip 		\
 birnet_sources = $(strip 		\
 	birnetthreadimpl.cc		\
 	birnetcpu.cc			\
+	birnetdebugtools.cc		\
 	birnetmsg.cc			\
 	birnetsignal.cc                 \
 	birnetthread.cc			\
