provide SVN revision number in reports.
Sun Feb  4 01:58:20 2007  Tim Janik  <timj@gtk.org>

        * Makefile.decl: provide SVN revision number in reports.

svn path=/trunk/; revision=4272

--- a/Makefile.decl
+++ b/Makefile.decl
@@ -94,6 +94,12 @@ report: all
 	&& export REPORTFILE="$(shell pwd)/report.out" ;	\
 	( :							\
 	  && echo -n "#TREPSTART: " && date --iso-8601=seconds	\
+	  && (svn info 2>/dev/null |				\
+	      sed -n '/^Revision: /{s/.*: /#TREPREV: SVN: /;p}'; \
+	      true )						\
+	  && (git-svn log -n1 2>/dev/null |				\
+	      sed -n '/^r[0-9]\+ /{s/r\([0-9]\+\) .*/#TREPREV: GIT-SVN: \1/;p;q}' ; \
+	      true )						\
 	  && $(MAKE) $(AM_MAKEFLAGS) check slowcheck perf	\
 	  && echo -n "#TREPDONE: "  && date --iso-8601=seconds	\
 	) 2>&1 | tee "$$REPORTFILE"				\
