Since BseNoise finally supports deterministic random generation,
Mon Feb  5 02:53:04 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am:
	* tests/audio/partymonster.ref: Since BseNoise finally supports
	deterministic random generation, regenerated the Party Monster
	reference file, and set the comparision threshold to 99.99. It still
	sounds the same, though (only minor changes in the extracted
	features).

svn path=/trunk/; revision=4294

--- a/tests/audio/Makefile.am
+++ b/tests/audio/Makefile.am
@@ -140,5 +140,5 @@ partymonster-test:
 	$(BSE2WAV) $(top_srcdir)/library/demo/partymonster.bse $(@F).wav
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --join-spectrum-slices=10 --avg-energy --end-time  > $(@F).tmp
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 1 --avg-spectrum --spectrum --join-spectrum-slices=10 --avg-energy --end-time >> $(@F).tmp
-	$(BSEFCOMPARE) $(srcdir)/partymonster.ref $(@F).tmp --threshold 99.97 # <- needs deterministic randomization
+	$(BSEFCOMPARE) $(srcdir)/partymonster.ref $(@F).tmp --threshold 99.99
 	rm -f $(@F).tmp $(@F).wav 
