--- a/birnet/tests/Makefile.am
+++ b/birnet/tests/Makefile.am
@@ -21,6 +21,9 @@ TESTS		+= strings
 SLOWTESTS       += strings
 strings_SOURCES  = strings.cc
 strings_LDADD	 = $(progs_ldadd)
+TESTS		+= systest
+systest_SOURCES  = systest.cc
+systest_LDADD	 = $(progs_ldadd)
 TESTS		+= threads
 PERFTESTS       += threads
 threads_SOURCES	 = threads.cc
