Added include central file which provides String and string_* helper
Fri Apr 13 14:22:34 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* Makefile.am:
	* sfidl-utils.hh: Added include central file which provides String and
	string_* helper functions by using them from birnet.

	* sfidl-*[hc]: Use String instead of std::string.

svn path=/trunk/; revision=4331

--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -65,6 +65,7 @@ sfidl_LDADD = $(SFI_LIBS) -lm $(top_builddir)/birnet/libbirnet.o # libsfi.la
 sfidl_CFLAGS = $(AM_CFLAGS) # hack to cause glib-extra.c to be compiled twice (work around automake)
 EXTRA_DIST += sfidl-generator.hh sfidl-namespace.hh sfidl-options.hh sfidl-parser.hh sfidl-factory.hh sfidl-typelist.hh
 EXTRA_DIST += sfidl-cbase.hh sfidl-clientc.hh sfidl-clientcxx.hh sfidl-corec.hh sfidl-corecxx.hh sfidl-cxxbase.hh sfidl-hostc.hh
+EXTRA_DIST += sfidl-utils.hh
 
 #
 # TOYPROF: poor man's profiling toy
