Refactored some code in order to remove unneccessary include files and to
Mon Apr 16 13:51:51 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-*[hc]: Refactored some code in order to remove unneccessary
	include files and to avoid "using namespace std;".

	* sfidl-typelist.hh:
	* sfidl-corec.hh:
	* sfidl-corecxx.hh:
	* Makefile.am: Remove include files that are not really needed any
	more.

svn path=/trunk/; revision=4332

--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -63,9 +63,8 @@ bin_PROGRAMS = sfidl
 sfidl_SOURCES = sfidl.cc $(common_idl_sources)
 sfidl_LDADD = $(SFI_LIBS) -lm $(top_builddir)/birnet/libbirnet.o # libsfi.la
 sfidl_CFLAGS = $(AM_CFLAGS) # hack to cause glib-extra.c to be compiled twice (work around automake)
-EXTRA_DIST += sfidl-generator.hh sfidl-namespace.hh sfidl-options.hh sfidl-parser.hh sfidl-factory.hh sfidl-typelist.hh
-EXTRA_DIST += sfidl-cbase.hh sfidl-clientc.hh sfidl-clientcxx.hh sfidl-corec.hh sfidl-corecxx.hh sfidl-cxxbase.hh sfidl-hostc.hh
-EXTRA_DIST += sfidl-utils.hh
+EXTRA_DIST += sfidl-generator.hh sfidl-namespace.hh sfidl-options.hh sfidl-parser.hh sfidl-factory.hh
+EXTRA_DIST += sfidl-cbase.hh sfidl-clientc.hh sfidl-clientcxx.hh sfidl-cxxbase.hh sfidl-hostc.hh sfidl-utils.hh
 
 #
 # TOYPROF: poor man's profiling toy
