Added new test for ArtsCompressor.
Thu Jun 21 18:21:33 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am:
	* tests/audio/artscompressor.ref: Added new test for ArtsCompressor.

svn path=/trunk/; revision=4342

--- a/tests/audio/Makefile.am
+++ b/tests/audio/Makefile.am
@@ -160,6 +160,15 @@ osc-test:
 	$(BSEFCOMPARE) $(srcdir)/osc-test.ref $(@F).tmp --threshold 99.99
 	rm -f $(@F).tmp $(@F).wav
 
+# a test for ArtsCompressor
+FEATURE_TESTS += artscompressor-test
+EXTRA_DIST += artscompressor.bse artscompressor.ref
+artscompressor-test:
+	$(BSE2WAV) $(srcdir)/artscompressor.bse $(@F).wav
+	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy  > $(@F).tmp
+	$(BSEFCOMPARE) $(srcdir)/artscompressor.ref $(@F).tmp --threshold 99.99
+	rm -f $(@F).tmp $(@F).wav
+
 # the BEAST demo song
 FEATURE_TESTS += partymonster-test
 EXTRA_DIST += partymonster.ref
