--- a/configure.in
+++ b/configure.in
@@ -18,7 +18,7 @@ AC_PREREQ(2.57)
 AC_DIVERT_BEFORE_HELP([
 BSE_MAJOR_VERSION=0
 BSE_MINOR_VERSION=7
-BSE_MICRO_VERSION=1
+BSE_MICRO_VERSION=2
 BSE_INTERFACE_AGE=0
 BSE_BINARY_AGE=0
 ])
@@ -31,7 +31,7 @@ dnl# if any functions have been added, set BSE_INTERFACE_AGE to 0.
 dnl# if backwards compatibility has been broken,
 dnl# set BSE_BINARY_AGE _and_ BSE_INTERFACE_AGE to 0.
 dnl# BST_RELEASE_CANDIDATE may contain rc[0-9]+ or nothing
-BST_RELEASE_CANDIDATE= #rc1
+BST_RELEASE_CANDIDATE=rc1
 
 # version number setup
 BSE_VERSION=$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION
