Added a missing file to EXTRA_DIST - beasts make distcheck succeeds here
Thu Sep 20 16:09:23 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am: Added a missing file to EXTRA_DIST - beasts
	make distcheck succeeds here now (with po directory alsa patch)

svn path=/trunk/; revision=4393

--- a/tests/audio/Makefile.am
+++ b/tests/audio/Makefile.am
@@ -125,7 +125,7 @@ osctranspose2-test:
 	rm -f $(@F).tmp $(@F).wav
 
 FEATURE_TESTS += xtalstringssong-test
-EXTRA_DIST += xtalstringssong.ref
+EXTRA_DIST += xtalstringssong.bse xtalstringssong.ref
 xtalstringssong-test:
 	$(BSE2WAV) $(srcdir)/xtalstringssong.bse $(@F).wav
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy  > $(@F).tmp
