bse-alsa: fix make distcheck.
Thu Sep 20 16:09:23 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am: Added a missing file to EXTRA_DIST - beasts
	make distcheck succeeds here now (with po directory alsa patch)

svn path=/trunk/; revision=4394

--- a/drivers/bse-alsa/configure.in
+++ b/drivers/bse-alsa/configure.in
@@ -8,6 +8,7 @@ builtin(include, acbeast.m4)dnl
 #
 AC_INIT
 AC_CONFIG_SRCDIR([bsepcmdevice-alsa.c])
+AC_CONFIG_AUX_DIR(.)
 AM_CONFIG_HEADER(configure.h)
 AC_PREREQ(2.57)
 
