Unit test for wave chunk keys, patch by stw from bug #450724.
Thu Aug 23 15:56:05 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/Makefile.am:
	* tools/bsewavetool.cc: Add --unit-test option to bsewavetool, which
	for now performs checks on the wave chunk key code, and automatic
	testing to make check.

svn path=/trunk/; revision=4409

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -41,6 +41,10 @@ noinst_PROGRAMS += mathtool
 mathtool_SOURCES = mathtool.c cxxdummy.cc
 mathtool_LDADD   = $(progs_ldadd)
 
+# === Bsewavetool tests ===
+check-after: bsewavetool-tests
+bsewavetool-tests:
+	bsewavetool --unit-test
 
 #
 # bonbon ;)
