tools/Makefile.am: fixed paths for bsewavetool invocation.
svn path=/trunk/; revision=4410

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -44,7 +44,7 @@ mathtool_LDADD   = $(progs_ldadd)
 # === Bsewavetool tests ===
 check-after: bsewavetool-tests
 bsewavetool-tests:
-	bsewavetool --unit-test
+	./bsewavetool --unit-test
 
 #
 # bonbon ;)
