Support various play-types in bse, bug #433431.
* bsewaveosc.[hc]: Added done output (inverse gate), which makes it
easy to use only the wave oscillator without adsr envelope in an
instrument.

* zintern/Makefile.am:
* zintern/plain-wave-[12].bse:
* zintern/adsr-wave-[12].bse: Add zintern mono/stereo version for
replaying samples with adsr envelope, and zintern mono/stereo bse file
for replaying waves without envelope (for drum samples). Pitch bend
is +/- 200 cent exponential, replay volume compatible to beast-0.7.1.

* bsetrack.c: Use plain-wave-[12] and adsr-wave-[12] depending on
play-type xinfo of the bsewave file.

svn path=/trunk/; revision=4437

--- a/bse/zintern/Makefile.am
+++ b/bse/zintern/Makefile.am
@@ -9,6 +9,10 @@ INCLUDES += -I$(top_srcdir) -I$(top_builddir) $(BSE_CFLAGS) -DG_DISABLE_DEPRECAT
 ZFILE_DEFS = $(strip \
 	wave-mono		$(srcdir)/wave-mono.bse		\
 	gus-patch		$(srcdir)/gus-patch.bse		\
+	adsr-wave-1		$(srcdir)/adsr-wave-1.bse	\
+	adsr-wave-2		$(srcdir)/adsr-wave-2.bse	\
+	plain-wave-1		$(srcdir)/plain-wave-1.bse	\
+	plain-wave-2		$(srcdir)/plain-wave-2.bse	\
 )
 
 gen_sources = xgen-bzc xgen-bzh
