--- a/docs/imports/Makefile.am
+++ b/docs/imports/Makefile.am
@@ -27,4 +27,4 @@ import-docs:
 
 dist-hook:
 	find stamp-import-docs -mtime -4 | fgrep -q stamp \
-	|| { echo "docs/imports/: Last import is older than 3 days, please run: make import-docs" >&2 ; exit 1 ; }
+	|| { echo "docs/imports/: Last import is older than 3 days, please run: make import-docs -C docs/imports/" >&2 ; exit 1 ; }
