Added versioned sample dir to search path.
2008-06-04 23:52:21  Tim Janik  <timj@gtk.org>

        * configure.in: renamed bse*sample*dir variables to be less ambiguous.

        * data/Makefile.am: added versioned sample dir to search path.

        * library/samples/Makefile.am: renamred variables accordingly.

svn path=/trunk/; revision=4472

--- a/configure.in
+++ b/configure.in
@@ -337,15 +337,15 @@ AC_DEFUN([AC_BSE_REQUIREMENTS],
     AC_SUBST(bsedriverdir)
     bseladspapath=${libdir}/ladspa
     AC_SUBST(bseladspapath)
-    bsesampledir=\${datadir}/bse/samples
-    AC_SUBST(bsesampledir)
+    bseunversionedsampledir=\${datadir}/bse/samples
+    AC_SUBST(bseunversionedsampledir)
     bsedatadir=\${datadir}/bse/v$BIN_VERSION
     bseeffectdir=$bsedatadir/effects
     AC_SUBST(bseeffectdir)
     bseinstrumentdir=$bsedatadir/instruments
     AC_SUBST(bseinstrumentdir)
-    bsesamplesdir=$bsedatadir/samples
-    AC_SUBST(bsesamplesdir)
+    bsesampledir=$bsedatadir/samples
+    AC_SUBST(bsesampledir)
     bsescriptdir=$bsedatadir/scripts
     AC_SUBST(bsescriptdir)
     bsedemodir=$bsedatadir/demo
