Improved Category entry for beast.desktop.in
Wed Jun 11 17:25:26 2008  Stefan Westerfeld  <stefan@space.twc.de>

	* data/beast.desktop.in: Improved Category entry with changes
	from Debian. Now includes Audio, Midi and Sequencer categories.

svn path=/trunk/; revision=4476

--- a/data/beast.desktop.in
+++ b/data/beast.desktop.in
@@ -8,5 +8,5 @@ Icon=beast.png
 TryExec=beast
 Exec=beast
 Terminal=false
-Categories=GTK;GNOME;Application;AudioVideo;AudioVideoEditing;Music;Player;
+Categories=GTK;GNOME;Audio;AudioVideo;AudioVideoEditing;Music;Player;Sequencer;Midi;
 MimeType=audio/x-bse;audio/x-bsewave;
