ChangeLog switched to auto-generated file from GIT commits

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,8 @@ include $(top_srcdir)/Makefile.decl
 
 SUBDIRS = . data birnet sfi bse plugins shell beast-gtk launchers library tools po tests doxer docs web
 
+noinst_DATA =
+
 # require automake 1.9
 AUTOMAKE_OPTIONS = 1.9 dist-bzip2 no-dist-gzip
 
@@ -38,6 +40,23 @@ check: check-recursive
 	@echo $(ALL_CHECKED_MSG) | sed 's/./=/g'
 	@echo $(ALL_CHECKED_MSG)
 	@echo $(ALL_CHECKED_MSG) | sed 's/./=/g'
+
+# === ChangeLog ===
+LAST_COMMITID = ce584d04999a7fb9393e1cfedde2048ba73e8878
+ChangeLog:	$(shell ls "$${GIT_DIR:-.git}/packed-refs" "$${GIT_DIR:-.git}/HEAD" "$${GIT_DIR:-.git}/`git symbolic-ref -q HEAD || echo HEAD`" 2>/dev/null )
+	: # Generate ChangeLog with -prefixed records
+	git log --pretty='format:%ad %an 	# %H (%cn)%n%n%s%n%n%b' \
+		${LAST_COMMITID}..HEAD		 > xgen-$(@F)
+	: # Tab-indent ChangeLog, except for record start
+	sed 's/^/	/;s/^	//;/^[ 	]*<unknown>$$/d' -i xgen-$(@F)
+	: # Kill trailing whitespaces, compress multiple trailing newlines
+	$(PYTHON) -c "import sys, re; sys.stdout.write ( \
+	  re.compile (r'\n\n\n(?=^\w)', re.M).sub ('\n\n', \
+	  re.compile ('^[	 ]+$$', re.M).sub ('', \
+	  sys.stdin.read())))" < xgen-$(@F) > xgen2-$(@F)
+	cp xgen2-$(@F) $@ && rm -f xgen-$(@F) xgen2-$(@F)
+noinst_DATA += ChangeLog
+EXTRA_DIST  += ChangeLog
 
 # fixup automake-1.9.6 distuninstallcheck:-rule reporting files created by update-mime-database(1)
 filter_stale_uninstalled      = | egrep -v '^.*/share/mime/(subclasses|globs|magic|XMLnamespaces|aliases)$$'
